# Rust-101

faucet-task/: Anchor.toml
faucet-task/programs/faucet-task/: Cargo.toml
faucet-task/programs/faucet-task/src/: lib.rs
homwrk_2/: main  main.rs
movie-review-program/: Anchor.toml  client-run.ts  generate-client.ts  package-lock.json  package.json  tsconfig.json
movie-review-program/programs/movie-review-program/: Cargo.toml
movie-review-program/programs/movie-review-program/src/: lib.rs
movie-review-program/tests/: movie-review-program.ts
pda-assignments/: Anchor.toml
pda-assignments/programs/note_taking/: Cargo.toml
pda-assignments/programs/note_taking/src/: lib.rs
pda-assignments/programs/pda-assignments/: Cargo.toml
pda-assignments/programs/pda-assignments/src/: lib.rs
pda-assignments/programs/profile_system/: Cargo.toml
pda-assignments/programs/profile_system/src/: lib.rs
pda-assignments/programs/voting_system/: Cargo.toml
pda-assignments/programs/voting_system/src/: lib.rs
pda-assignments/tests/: pda-assignments.ts
surfpool-assignments/: .gitignore  Cargo.toml
